# fastapi-url-shortener

./: .gitignore  README.md  pyproject.toml  sql_app.db
app/: crud.py  main.py
app/models/: models.py
app/schemas/: schema.py
