[tool.poetry]
name = "fastapi-url-shortener"
version = "0.1.0"
description = ""
authors = ["oliver.naaris <oliver.naaris@planetway.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
redis = "^3.5.3"
shortuuid = "^1.0.1"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
